Fix vertical alignment of inline Shortcode text fields.

--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -93,6 +93,7 @@
 	font-weight: bold;
 	box-shadow: none;
 	text-align: center;
+	vertical-align: baseline;
 }
 
 /* Table ID/name dropdown on "Export" screen */
